@@ -10,7 +10,8 @@ enum
    TAG_HULL,
    TAG_ALL_HULLS_SENT,
    TAG_NOISE,
-   TAG_ALL_NOISE_SENT
+   TAG_ALL_NOISE_SENT,
+   TAG_XCHANGE_DIMENSIONS
 };
 
 #endif /* __CLUSTERING_TAGS_H__ */
